CavernRiskGraph: Minor tidy up for reading in given cave map